# MDCToolbox

./: CMakeLists.txt  MDCToolboxConstants.h  MDCToolboxPlugin.cpp  MDCToolboxPlugin.h
Documentation/MDCToolboxFilters/: MDCToolboxFilter.md
MDCTool/: CMakeLists.txt  CTestConfig.cmake  README.md
MDCTool/Resources/CPack/: PackageProject.cmake
MDCTool/Resources/icons/icns/: MDCTool.icns
MDCTool/Resources/icons/images/: Icons.qrc
MDCTool/Source/MDCTool/: CMakeLists.txt  Constants.h  D3DInfoPage.cpp  D3DInfoPage.h  D3DProcessingPage.cpp  D3DProcessingPage.h  D3DProcessor.cpp  D3DProcessor.h  D3DProcessorObserver.cpp  D3DProcessorObserver.h  FilePathGenerator.cpp  FilePathGenerator.h  GatherDataPage.cpp  GatherDataPage.h  ImportFilesWidget.cpp  ImportFilesWidget.h  InputDataPage.cpp  InputDataPage.h  MDCConfiguration.cpp  MDCConfiguration.h  MDCTool.cpp  MDCTool.h  MDCToolStyles.cpp  MDCToolStyles.h  PreviewTableItem.cpp  PreviewTableItem.h  PreviewTableModel.cpp  PreviewTableModel.h  ProcessingResultsDialog.cpp  ProcessingResultsDialog.h  QFSDropLineEdit.cpp  QFSDropLineEdit.h  QFileCompleter.cpp  QFileCompleter.h  SendToExtToolPage.cpp  SendToExtToolPage.h  main.cpp
MDCTool/Source/MDCTool/UI_Files/: D3DInfoPage.ui  D3DProcessingPage.ui  GatherDataPage.ui  ImportFilesWidget.ui  InputDataPage.ui  ProcessingResultsDialog.ui  SendToExtToolPage.ui
MDCTool/Support/ITKSupport/: IncludeITK.cmake
MDCTool/Support/Scripts/: build_deploy.bat
MDCTool/Support/Scripts/Win_Build_Scripts/: Build_ITK.bat
MDCTool/Support/cmp/ExtLib/: Qt5Support.cmake
MDCTool/Support/cmp/Linux_Tools/: InstallLibraries.sh.in
MDCTool/TempFiles/: TempFileLocations.h.in
MDCToolboxFilters/: MDCToolboxFilter.cpp  MDCToolboxFilter.h  SourceList.cmake
Resources/: MDCToolbox.qrc
Resources/MDCToolbox/: MDCToolboxDescription.txt
Test/: CMakeLists.txt  MDCToolboxFilterTest.cpp  TestFileLocations.h.in
