#--////////////////////////////////////////////////////////////////////////////
#--
#--  Copyright (c) 2015 BlueQuartz Software, LLC
#--  All rights reserved.
#--  BSD License: http://www.opensource.org/licenses/bsd-license.html
#--
#-- This code was partly written under US Air Force Contract FA8650-07-D-5800
#--
#--////////////////////////////////////////////////////////////////////////////
PROJECT( MDCTool VERSION ${MDCToolProj_VERSION_MAJOR}.${MDCToolProj_VERSION_MINOR}.${MDCToolProj_VERSION_PATCH})

include(${CMP_SOURCE_DIR}/cmpProject.cmake)

# --------------------------------------------------------------------
# Look for Qt 5 as we need it for the plugin GUI to be generated
if(NOT Qt5Core_FOUND)
    message(FATAL_ERROR "Qt 5 is Needed for this project")
endif()


# Set the GUI type for different platforms
SET(GUI_TYPE )

# Set some Win32 Specific Settings
if(WIN32)
 SET(GUI_TYPE WIN32)
ENDif(WIN32)


set(MDCTool_SRCS
  ${MDCTool_SOURCE_DIR}/D3DInfoPage.cpp
  ${MDCTool_SOURCE_DIR}/D3DProcessingPage.cpp
  ${MDCTool_SOURCE_DIR}/D3DProcessor.cpp
  ${MDCTool_SOURCE_DIR}/FilePathGenerator.cpp
  ${MDCTool_SOURCE_DIR}/GatherDataPage.cpp
  ${MDCTool_SOURCE_DIR}/ImportFilesWidget.cpp
  ${MDCTool_SOURCE_DIR}/InputDataPage.cpp
  ${MDCTool_SOURCE_DIR}/MDCConfiguration.cpp
  ${MDCTool_SOURCE_DIR}/MDCTool.cpp
  ${MDCTool_SOURCE_DIR}/MDCToolStyles.cpp
  ${MDCTool_SOURCE_DIR}/PreviewTableItem.cpp
  ${MDCTool_SOURCE_DIR}/PreviewTableModel.cpp
  ${MDCTool_SOURCE_DIR}/QFSDropLineEdit.cpp
  ${MDCTool_SOURCE_DIR}/QFileCompleter.cpp
  ${MDCTool_SOURCE_DIR}/SendToExtToolPage.cpp
  ${MDCTool_SOURCE_DIR}/main.cpp
  )

SET(MDCTool_HDRS
    ${MDCTool_SOURCE_DIR}/FilePathGenerator.h
    ${MDCTool_SOURCE_DIR}/PreviewTableItem.h
    ${MDCTool_SOURCE_DIR}/Constants.h
  )

SET(MDCTool_MOC_HDRS
    ${MDCTool_SOURCE_DIR}/D3DInfoPage.h
    ${MDCTool_SOURCE_DIR}/D3DProcessingPage.h
    ${MDCTool_SOURCE_DIR}/D3DProcessor.h
    ${MDCTool_SOURCE_DIR}/GatherDataPage.h
    ${MDCTool_SOURCE_DIR}/ImportFilesWidget.h
    ${MDCTool_SOURCE_DIR}/InputDataPage.h
    ${MDCTool_SOURCE_DIR}/MDCConfiguration.h
    ${MDCTool_SOURCE_DIR}/MDCTool.h
    ${MDCTool_SOURCE_DIR}/MDCToolStyles.h
    ${MDCTool_SOURCE_DIR}/PreviewTableModel.h
    ${MDCTool_SOURCE_DIR}/QFSDropLineEdit.h
    ${MDCTool_SOURCE_DIR}/QFileCompleter.h
    ${MDCTool_SOURCE_DIR}/SendToExtToolPage.h
  )

cmp_IDE_SOURCE_PROPERTIES( "MDCTool" "${MDCTool_HDRS};${MDCTool_MOC_HDRS}" "${MDCTool_SRCS}" "${PROJECT_INSTALL_HEADERS}")

# The UI files As generated by Qt Designer
SET(MDCTool_UIS
  ${MDCTool_SOURCE_DIR}/UI_Files/D3DInfoPage.ui
  ${MDCTool_SOURCE_DIR}/UI_Files/D3DProcessingPage.ui
  ${MDCTool_SOURCE_DIR}/UI_Files/GatherDataPage.ui
  ${MDCTool_SOURCE_DIR}/UI_Files/ImportFilesWidget.ui
  ${MDCTool_SOURCE_DIR}/UI_Files/InputDataPage.ui
  ${MDCTool_SOURCE_DIR}/UI_Files/SendToExtToolPage.ui
)

cmp_IDE_GENERATED_PROPERTIES("MDCTool/UI_Files" "${MDCTool_UIS}" "")

# and finally any resource files
# SET(MDCTool_RCS ${MDCTool_SOURCE_DIR}/Templates.qrc)
SET(MDCTool_RCS
    ${PROJECT_RESOURCES_DIR}/icons/images/Icons.qrc
)

# -- Run MOC and UIC on the necessary files
QT5_ADD_RESOURCES( MDCTool_Generated_RC_SRCS ${MDCTool_RCS} ${QRC_LICENSE_FILES})

# this will run uic on .ui files:
QT5_WRAP_UI( MDCTool_Generated_UI_HDRS ${MDCTool_UIS} )

# and finally this will run moc:
QT5_WRAP_CPP( MDCTool_Generated_MOC_SRCS ${MDCTool_MOC_HDRS} )

#-- Put the generated files into their own group for IDEs
cmp_IDE_GENERATED_PROPERTIES("Generated/ui" "${MDCTool_Generated_UI_HDRS}" "")
cmp_IDE_GENERATED_PROPERTIES("Generated/moc" "${MDCTool_Generated_MOC_SRCS}" "")
cmp_IDE_GENERATED_PROPERTIES("Generated/qrc" "${QRC_LICENSE_FILES}" "${MDCTool_Generated_RC_SRCS}")

# -- Finally set the Project Sources to include all the sources
set(${PROJECT_NAME}_PROJECT_SRCS
  ${MDCTool_SRCS}
  ${MDCTool_HDRS}
  ${MDCTool_MOC_HDRS}
  ${MDCTool_Generated_MOC_SRCS}
  ${MDCTool_Generated_RC_SRCS}
  ${MDCTool_Generated_UI_HDRS}
  )

include_directories(${MDCTool_SOURCE_DIR} )
include_directories(${MDCTool_SOURCE_DIR}/.. )
include_directories(${MDCTool_BINARY_DIR} )



if(APPLE)
    set(APPLICATION_ICON ${PROJECT_RESOURCES_DIR}/icons/icns/${PROJECT_NAME}.icns)
endif(APPLE)

if(WIN32)
    set(APPLICATION_ICON ${PROJECT_RESOURCES_DIR}/icons/ico/${PROJECT_NAME}.ico)
ENDif(WIN32)

set(DEST_DIR ".")
if(UNIX AND NOT APPLE)
    set(DEST_DIR "bin")
endif()

BuildQtAppBundle(
    TARGET ${PROJECT_NAME}
    SOURCES ${MDCTool_PROJECT_SRCS}
    DEBUG_EXTENSION ${EXE_DEBUG_EXTENSION}
    ICON_FILE  ${APPLICATION_ICON}
    VERSION_MAJOR ${DREAM3D_VER_MAJOR}
    VERSION_MINOR ${DREAM3D_VER_MINOR}
    VERSION_PATCH ${DREAM3D_VER_PATCH}
    BINARY_DIR    ${${PROJECT_NAME}_BINARY_DIR}
    LINK_LIBRARIES  SIMPLib
    LIB_SEARCH_DIRS ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
    QT5_MODULES   ${Qt5_COMPONENTS}
    COMPONENT     Applications
    INSTALL_DEST  ${DEST_DIR}
)



#- This installs all the help files. Note that we assume a flat directory structure
#- in the "Help" folder, ie, all html files, images, etc are all in the "Help"
#- folder and NOT in any subfolders beyond that.
install(DIRECTORY ${MDCTool_SOURCE_DIR}/Template
        DESTINATION .
        COMPONENT Applications )
